style.css
/* Global */ 

*{
	padding: 0;
	margin: 0;
	box-sizing: border-box;
}

:root {
	--bg-color: #f8f8ff;
    --itv-blue: #3d61af;
    --itv-red: #bf1b2d;
}

body {
    background: var(--bg-color);
}

.construction {
    width: clamp(250px, 45.5vw, 700px)
}

/* Large screen nav */

.nav-2-electric-buggalo {
    display: flex;
    width: 95vw;
    justify-content: center;
    align-items: center;
}

.logo-img {
    width: 313px;
    height: 112.5px;
}

#navBoxToggle {
    cursor: pointer;
}

#navBoxToggle > span {
    text-decoration: underline;
}

.nav-buttons {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.nav-buttons > div > div > a {
    color: black;
}

.nav-buttons-1 {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 500px;
    justify-content: space-between;
    margin-top: 45px;
}

.nav-buttons-2 {
    position: relative;
}

.elections-dropdown-links {
    display: none;
    flex-direction: column;
    background: rgb(186, 189, 193);
    position: absolute;
    z-index: 1;
    padding: 12px;
}

/* Tablet/Mobile Nav and Jumbotron */

.menu-wrap-homepage {
    display: none;
}

.menu-wrap {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 1;
}

.menu-wrap .toggler {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 2;
    cursor: pointer;
    width: 50px;
    height: 50px;
    opacity: 0;
}

.menu-wrap .hamburger {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    width: 60px;
    height: 60px;
    padding: 1rem;
    display: flex;
    border-radius: 18px;
    align-items: center;
    justify-content: center;
    background: var(--itv-red);
}

.menu-wrap .hamburger > div {
    position: relative;
    width: 100%;
    height: 2px;
    background: white;
    display: flex;
    align-items: center;
    justify-content: center;
    transition: all 0.4s ease;
}

.menu-wrap .hamburger > div:before,
.menu-wrap .hamburger > div:after {
    content: '';
    position: absolute;
    z-index: 1;
    top: -10px;
    width: 100%;
    height: 2.4px;
    background: inherit;
}

.menu-wrap .hamburger > div:after {
    top: 10px;
}

.menu-wrap .toggler:checked + .hamburger > div {
    transform: rotate(135deg);
}

.menu-wrap .toggler:checked + .hamburger > div:before,
.menu-wrap .toggler:checked + .hamburger > div:after {
    top: 0;
    transform: rotate(90deg);
}

.menu-wrap .toggler:checked ~ .menu {
    visibility: visible;
    
}

.menu-wrap .toggler:checked ~ .menu > div {
    transform: scale(1);
    transition-duration: 0.75s;
}

.menu-wrap .toggler:checked ~ .menu > div > div {
    opacity: 1;
    transition: opacity 0.4s ease;
}

.menu-wrap .menu {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    visibility: hidden;
    overflow: hidden;
    display: flex;
    align-items: center;
    justify-content: center;
}

.menu-wrap .menu > div {
    background-color: #3e5fb1;
    border-radius: 50%;
    width: 200vw;
    height: 200vw;
    display: flex;
    flex: none;
    align-items: center;
    justify-content: center;
    transform: scale(0);
    transition: all 0.4s ease;
}

.menu-wrap .menu > div > div {
    text-align: center;
    max-width: 90vw;
    max-height: 100vh;
    opacity: 0;
    transition: opacity 0.4s ease;
}

.menu-wrap .menu > div > div > ul > li {
    list-style: none;
    color: white;
    font-size: 1.5rem;
    padding: 1rem;
}

.menu-wrap .menu > div > div > ul > li > a {
    color: inherit;
    text-decoration: none;
    transition: color 0.4s ease;
}

#jumbotronjawn {
    width: 100vw;
    height: clamp(150px, 30vw, 464px);
    object-fit: cover;
}

/* Quick Summary Modal Styles */

.modal {
    display: grid;
    place-self: center;
    width: 75%;
    padding: 1rem;
    border-radius: 4px;
}

.modal-content {
    display: grid;
    place-items: center;
}

.quick-sum {
    color:var(--itv-red);
    font-size: clamp(24px, 2vw, 36px);
    text-transform: uppercase;
    font-style: italic;
}

.page-title {
    font-size: clamp(14px, 2vw, 20px);
    margin-bottom: 8px;
    text-align: center;
}

.modal-content > p {
    padding: 0 1rem 0 1rem;
    font-size: 16px;
    line-height: clamp(25px, 2vw, 30px);
}

.close {
    position: absolute;
    top: 6px;
    right: 5px;
    width: 24px;
    height: 24px;
}

.quick-summary-reopen {
    display: grid;
    justify-self: center;
    margin-top: 16px;
    padding: 12px;
    border-radius: 22px;
    color:var(--itv-red);
    font-size: clamp(24px, 2vw, 36px);
    text-transform: uppercase;
    font-style: italic;
    cursor: pointer;
    display: none;
}

/* Video Embeds */

.video-box, .video-box-modal {
    display: grid;
    justify-items: center;
    padding: 16px;
}

.video-heading {
    margin-bottom: 10px;
}

.video-box > iframe {
    width: clamp(300px, 37vw, 560px);
    height: clamp(168px, 20vw, 315px)
}

.video-box-modal > iframe {
    width: clamp(250px, 37vw, 560px);
    height: clamp(140.6px, 20vw, 315px)
}

/* Homepage styles */

.cta-landing {
    background-image: url('assets/lighthouse.jpg');
    background-repeat:no-repeat;
    background-size: cover;
    width: calc(100vw - (100vw - 100%));
    height: 100vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 18px;
}

.container-subh {
    text-align: center;
    background: #3e5fb1;
    color: white;
    font-weight: 900;
    width: clamp(313px, 52vw, 800px);
    height: 50%;
    display: grid;
    align-items: center;
    border-radius: 12px;
    padding: 14px;
    letter-spacing: 1px;
}

.container-subh > section {
    font-size: clamp(20px, 3vw, 36px);
    line-height: clamp(26px, 3vw, 47px);
}

.container-subh > p {
    font-size: 14px;
}

.container {
    display: grid;
    justify-items: center;
    font-family: 'Lora', serif;
    max-width: 100vw;
}

.linkbox-elections {
    margin-bottom: 10px;
    border-radius: 8px;
    padding: 5px;
}
/* ... */

